admin/src/apps/developer/views/tableStyle.css
.developer-webhooks .tabulator-header .tabulator-frozen {
    display: inline-block;
    position: absolute;
    z-index: 10;
    margin-top: -10px;
    height: 100% !important;
    padding-top: 10px;
}

.developer-webhooks .tabulator-tableHolder {
    position: relative;
    width: 100%;
    white-space: nowrap;
    overflow-y: auto;
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
}

.developer-webhooks-processedEvents {
    position: relative;
    background-color: #fff;
    overflow: auto;
    font-size: 14px;
    text-align: left;
    width: 100%;
    max-width: 100%;
    margin-bottom: 20px;
    transform: translatez(0);
}

